Remove duplicated style

--- a/app/ui/sass/index.scss
+++ b/app/ui/sass/index.scss
@@ -12,9 +12,11 @@
 @import "./components/header";
 @import "./components/footer";
 @import "./components/slide-menu";
+@import "./components/full-calendar-style";
 @import "./components/calendar-page";
 @import "./components/add-new-item";
 @import "./components/budget-page";
+@import "./components/analysis-page";
 
 body{
     height: 100dvh;
