--- a/app/ui/sass/index.scss
+++ b/app/ui/sass/index.scss
@@ -10,6 +10,7 @@
 @use "./components/add-new-item";
 @use "./components/budget-page";
 @use "./components/analysis-page";
+@use "./components/search-page";
 
 
 @tailwind base;
